--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>THEMedany</title>
-	<link href="./asset/css/tether.min.css" rel="stylesheet">
 	<link href="./asset/css/bootstrap.min.css" rel="stylesheet">
 	<link href="./asset/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="./asset/img/favicon.ico">
-	<script>document.write("<link href='./asset/css/style.css?v=" + Date.now() + " 'rel='stylesheet'><\/link>");</script>
+	<script>document.write("<link href='./asset/css/style.min.css?v=" + Date.now() + " 'rel='stylesheet'><\/link>");</script>
     <!--[if lt IE 9]>
       <script src="./asset/js/html5shiv.js"></script>
       <script src="./asset/js/respond.min.js"></script>
@@ -51,12 +50,7 @@
   						</div>
   						<div class="col-xs-9">
   							<div class="profession">Java Developer</div>
-  							<div class="description">Responsible for Java/Java EE application development, building high-performing,
-scalable, enterprise-grade applications. Analyzing user requirements, envisioning
-system features and functionality, designs, develops user interfaces to internet/
-intranet applications. Integrates applications by designing database architecture
-and server scripting. Studying and establishing connectivity with network
-systems, search engines, and information servers.</div>
+  							<div class="description">Java/Java EE application development, building high-performing, scalable, enterprise-grade applications. Analyzing user requirements, envisioning system features and functionality, designs, develops user interfaces to internet/intranet applications. Integrates applications by designing database architecture and server scripting. Studying and establishing connectivity with network systems, search engines, and information servers.</div>
   						</div>
   					</div>
   					<div class="job clearfix">
@@ -66,9 +60,7 @@ systems, search engines, and information servers.</div>
   						</div>
   						<div class="col-xs-9">
   							<div class="profession">Software Developer</div>
-  							<div class="description">Analyse, Design, Develop. Test, Maintain and Document current and new
-software solutions. In addition to learn new technologies to improve software
-experience.</div>
+  							<div class="description">Analyse, design, develop. test, maintain and document current and new software solutions. In addition to learn new technologies to improve software experience.</div>
   						</div>
   					</div>
   				</div>
@@ -136,13 +128,13 @@ allow me to continue to develop my knowledge and potential.</p>
   					<h2>Languages</h2>
   					<div id="language-skills">
   						<div class="skill">
-  							Arabic 
+  							Arabic
   							<div class="pull-right">
   								<div class="skills-stars" data-stars="5"></div>
   							</div>
   						</div>
   						<div class="skill">
-  							English 
+  							English
   							<div class="pull-right">
   								<div class="skills-stars" data-stars="4"></div>
   							</div>
@@ -154,39 +146,39 @@ allow me to continue to develop my knowledge and potential.</p>
   					<h2>Contact</h2>
   					<div class="contact-item">
   						<div class="icon pull-left text-center" title="Mobile">
-  							<span class="custom-icon custom-icon-phone" title="Mobile"></span>
+  							<span class="fa fa-phone custom-icon custom-icon-phone" title="Mobile"></span>
   						</div>
   						<div class="title only pull-right">(+20) 100 583 3206</div>
   					</div>
   					<div class="contact-item">
   						<div class="icon pull-left text-center" title="Mobile">
-  							<span class="custom-icon custom-icon-whatsapp" title="WhatsApp"></span>
+  							<span class="fa fa-whatsapp custom-icon custom-icon-whatsapp" title="WhatsApp"></span>
   						</div>
   						<div class="title only pull-right">(+20) 100 583 3206</div>
   					</div>
   					<div class="contact-item">
   						<div class="icon pull-left text-center">
-  							<span class="custom-icon custom-icon-gmail" title="E-mail"></span>
+  							<span class="fa fa-envelope-o custom-icon custom-icon-gmail" title="E-mail"></span>
   						</div>
   						<div class="title only pull-right">mo.elmedany@gmail.com</div>
   					</div>
   					<div class="contact-item">
   						<div class="icon pull-left text-center">
-  							<span class="custom-icon custom-icon-twitter" title="Twitter"></span>
+  							<span class="fa fa-twitter custom-icon custom-icon-twitter" title="Twitter"></span>
   						</div>
   						<div class="title pull-right">Twitter</div>
   						<div class="description pull-right"><a href="http://www.twitter.com/THEMedany" target="_new">@THEMedany</a></div>
   					</div>
   					<div class="contact-item">
   						<div class="icon pull-left text-center">
-  							<span class="custom-icon custom-icon-facebook" title="Facebook"></span>
+  							<span class="fa fa-facebook custom-icon custom-icon-facebook" title="Facebook"></span>
   						</div>
   						<div class="title pull-right">Facebook</div>
   						<div class="description pull-right"><a href="http://www.fb.com/THEMedany" target="_new">THEMedany</a></div>
   					</div>
   					<div class="contact-item">
   						<div class="icon pull-left text-center">
-  							<span class="custom-icon custom-icon-skype" title="Skype"></span>
+  							<span class="fa fa-skype custom-icon custom-icon-skype" title="Skype"></span>
   						</div>
   						<div class="title pull-right">Skype</div>
   						<div class="description pull-right">mohamedel-medany</div>
@@ -205,7 +197,6 @@ allow me to continue to develop my knowledge and potential.</p>
   	<script src="./asset/js/jquery.min.js"></script>
   	<script src="./asset/js/jquery.waypoints.min.js"></script>
   	<script src="./asset/js/inview.min.js"></script>
-  	<script src="./asset/js/tether.min.js"></script>
   	<script src="./asset/js/bootstrap.min.js"></script>
   	<script>document.write("<script type='text/javascript' src='./asset/js/custom.min.js?v=" + Date.now() + "'><\/script>"); var e = document.getElementsByTagName("script");e=e[e.length-2];document.body.removeChild(e);</script>
   	<script>document.write("<script type='text/javascript' src='./asset/js/app.min.js?v=" + Date.now() + "'><\/script>"); var e = document.getElementsByTagName("script");e=e[e.length-2];document.body.removeChild(e);</script>
