--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>THEMedany</title>
 	<link href="./asset/css/bootstrap.min.css" rel="stylesheet">
 	<link href="./asset/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="icon" type="image/png" href="./asset/img/favicon.ico">
+	<link rel="icon" type="image/png" href="./asset/img/avatar.png">
 	<script>document.write("<link href='./asset/css/style.min.css?v=" + Date.now() + " 'rel='stylesheet'><\/link>");</script>
     <!--[if lt IE 9]>
       <script src="./asset/js/html5shiv.js"></script>
@@ -187,9 +187,12 @@ allow me to continue to develop my knowledge and potential.</p>
   				<!-- HOBBIES -->
   				<div class="box">
   					<h2>Hobbies</h2>
-  					<div class="hobby">Programming</div>
-  					<div class="hobby">Music Production</div>
-  					<div class="hobby">DJing</div>
+  					<div class="hobby">IT</div>
+						 <div class="hobby">Coffee</div>
+						 <div class="hobby">Music</div>
+						 <div class="hobby">Food</div>
+						 <div class="hobby">Reading</div>
+						 <div class="hobby">Movies</div>
   				</div>
   			</div>
   		</div>
