--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>THEMedany</title>
+	<title>Senior Software Engineer</title>
 	<link href="./asset/css/bootstrap.min.css" rel="stylesheet">
 	<link href="./asset/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="./asset/img/avatar.png">
 	<script>
-		document.write("<link href='./asset/css/style.min.css?v=" + Date.now() + " 'rel='stylesheet'><\/link>");
+		document.write("<link href='./asset/css/style.css?v=" + Date.now() + " 'rel='stylesheet' />");
 	</script>
 	<!--[if lt IE 9]>
       <script src="./asset/js/html5shiv.js"></script>
@@ -44,7 +44,7 @@
 						</div>
 					</a>
 					<div id="text-header">
-						<h1>Hello,<br> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and this is my resume/cv</h1>
+						<h1>Hello,<br> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
 					</div>
 				</div>
 			</div>
@@ -54,49 +54,43 @@
 				<!-- EXPERIENCES -->
 				<div class="box">
 					<h2>Experiences</h2>
+                    <div class="job clearfix">
+                        <div class="col-xs-3">
+                            <div class="where">Bol.</div>
+                            <div class="year"> 2018 - Now </div>
+                        </div>
+                        <div class="col-xs-9">
+                            <div class="profession">Software Engineer</div>
+                        </div>
+                    </div>
+                    <hr />
 					<div class="job clearfix">
 						<div class="col-xs-3">
 							<div class="where">VSSE</div>
-							<div class="year"> 2017 </div>
+							<div class="year"> 2017 - 2018 </div>
 						</div>
 						<div class="col-xs-9">
 							<div class="profession">Digital Design & Enablement Engineer</div>
-							<div class="description">
-								<ul>
-									<li>Working with other developers to automate & digitize real-time processes and work-flows.</li>
-									<li>Using and learning new tools & technologies.</li>
-								</ul>
-							</div>
 						</div>
 					</div>
+                    <hr />
 					<div class="job clearfix">
 						<div class="col-xs-3">
 							<div class="where">Vodafone</div>
-							<div class="year"> 2016 </div>
+							<div class="year"> 2016 - 2017 </div>
 						</div>
 						<div class="col-xs-9">
 							<div class="profession">Java Developer</div>
-							<div class="description">
-								<ul>
-									<li>Involved in Java/Java EE application development, building high-performing, scalable, and enterprise-grade applications.</li>
-									<li>Used to analyze user requirements, envisioning system features and functionality, designs, develops user interfaces to internet/intranet applications. Also Integrates applications by designing database architecture and server scripting.</li>
-								</ul>
-							</div>
 						</div>
 					</div>
+                    <hr />
 					<div class="job clearfix">
 						<div class="col-xs-3">
 							<div class="where">ferrycode</div>
-							<div class="year"> 2014 </div>
+							<div class="year"> 2014 - 2015 </div>
 						</div>
 						<div class="col-xs-9">
 							<div class="profession">Software Developer</div>
-							<div class="description">
-								<ul>
-									<li>Analyze, design, develop, test, maintain and document current and new software solutions.</li>
-									<li>Learning new technologies to improve software quality & experience.</li>
-								</ul>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -129,9 +123,9 @@
 				</div>
 				<!-- ABOUT ME -->
 				<div class="box">
-					<h2>About Me</h2>
-					<p>Hello! I'm Mohamed; A Computer Science graduate with many years’ experience in software development. Since graduating, I've worked as a Java developer and gained excellent experience in building custom web and enterprise application that is highly available and scalable. I've worked in multiple work environments from startups to large multinational organizations.</p>
-					<p>The technologies that I work with, alongside with Java, are Spring, Hibernate, JSF, EJB, Oracle, MySQL, PostgreSQL, Javascript, Angular, jQuery, HTML, Bootstrap and many more.</p>
+					<h2>Summary</h2>
+                    <p>Hello! I'm Mohamed, Senior Software Engineer with 10 years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
+                    <p>The technologies that I work with, alongside with Java, are Spring, Hibernate, PostgreSQL, Maven, Kubernetes, Cloud  and many more.</p>
 					<p>On the personal side, I'm a day dreamer, coffee addict and food lover. Additionally, I like listening to new music and learn to play it. I always seek new challenges to prove my developer and problem solving skills and continue to develop my knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
 				</div>
 			</div>
@@ -140,20 +134,15 @@
 				<div class="box">
 					<h2>Skills</h2>
 					<div class="skills">
-						<div class="item-skills" data-percent="0.99">Java/J2EE</div>
-						<div class="item-skills" data-percent="0.99">Web/Enterprise Applications</div>
+						<div class="item-skills" data-percent="0.99">Java</div>
+						<div class="item-skills" data-percent="0.99">Backend Development</div>
 						<div class="item-skills" data-percent="0.98">Databases Analysis & Design</div>
 						<div class="item-skills" data-percent="0.95">REST APIs & SOA</div>
-						<div class="item-skills" data-percent="0.93">Cross-Platform Mobile</div>
-						<div class="item-skills" data-percent="0.92">Cloud & DevOps</div>
-						<div class="skills-legend clearfix">
-							<div class="legend-left legend">Beginner</div>
-							<div class="legend-left legend">Intermediate</div>
-							<div class="legend-right legend"><span>Proficient</span></div>
-							<div class="legend-right legend"><span>Expert</span></div>
-						</div>
+						<div class="item-skills" data-percent="0.93">Cloud & DevOps</div>
+                        <div class="item-skills" data-percent="0.90">Cross-Platform Mobile</div>
 					</div>
 				</div>
+                <hr />
 				<!-- LANGUAGES -->
 				<div class="box">
 					<h2>Languages</h2>
@@ -170,6 +159,12 @@
 								<div class="skills-stars" data-stars="4"></div>
 							</div>
 						</div>
+                        <div class="skill">
+                            Dutch
+                            <div class="pull-right">
+                                <div class="skills-stars" data-stars="1"></div>
+                            </div>
+                        </div>
 					</div>
 				</div>
 				<!-- CONTACT -->
@@ -179,13 +174,13 @@
 						<div class="icon pull-left text-center" title="Mobile">
 							<span class="fa fa-phone custom-icon custom-icon-phone" title="Mobile"></span>
 						</div>
-						<div class="title only pull-right">(+20) 100 583 3206</div>
+						<div class="title only pull-right">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
 						<div class="icon pull-left text-center" title="Mobile">
 							<span class="fa fa-whatsapp custom-icon custom-icon-whatsapp" title="WhatsApp"></span>
 						</div>
-						<div class="title only pull-right">(+20) 100 583 3206</div>
+						<div class="title only pull-right">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
 						<div class="icon pull-left text-center">
@@ -193,36 +188,14 @@
 						</div>
 						<div class="title only pull-right">mo.elmedany@gmail.com</div>
 					</div>
-					<div class="contact-item">
-						<div class="icon pull-left text-center">
-							<span class="fa fa-twitter custom-icon custom-icon-twitter" title="Twitter"></span>
-						</div>
-						<div class="title pull-right">Twitter</div>
-						<div class="description pull-right"><a href="http://www.twitter.com/THEMedany" target="_new">@THEMedany</a></div>
-					</div>
-					<div class="contact-item">
-						<div class="icon pull-left text-center">
-							<span class="fa fa-facebook custom-icon custom-icon-facebook" title="Facebook"></span>
-						</div>
-						<div class="title pull-right">Facebook</div>
-						<div class="description pull-right"><a href="http://www.fb.com/THEMedany" target="_new">THEMedany</a></div>
-					</div>
-					<div class="contact-item">
-						<div class="icon pull-left text-center">
-							<span class="fa fa-skype custom-icon custom-icon-skype" title="Skype"></span>
-						</div>
-						<div class="title pull-right">Skype</div>
-						<div class="description pull-right">mohamedel-medany</div>
-					</div>
 				</div>
 				<!-- HOBBIES -->
 				<div class="box">
 					<h2>Hobbies</h2>
-					<div class="hobby">IT</div>
 					<div class="hobby">Coffee</div>
 					<div class="hobby">Music</div>
-					<div class="hobby">Food</div>
 					<div class="hobby">Reading</div>
+                    <div class="hobby">Food</div>
 					<div class="hobby">Movies</div>
 				</div>
 			</div>
