--- a/index.html
+++ b/index.html
@@ -12,25 +12,6 @@
 	<script>
 		document.write("<link href='./asset/css/style.css?v=" + Date.now() + " 'rel='stylesheet' />");
 	</script>
-	<!--[if lt IE 9]>
-      <script src="./asset/js/html5shiv.js"></script>
-      <script src="./asset/js/respond.min.js"></script>
-      <![endif]-->
-	<script>
-		(function(i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function() {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', './asset/www.google-analytics.com/analytics.js', 'ga');
-		ga('create', 'UA-51302339-1', 'kamsolutions.html');
-		ga('send', 'pageview');
-	</script>
 </head>
 
 <body>
@@ -94,27 +75,27 @@
 						</div>
 					</div>
 				</div>
-				<!-- EDUCATION -->
+				<!-- LIVE EVENTS -->
 				<div class="box">
-					<h2>Education</h2>
-					<ul id="education" class="clearfix">
+					<h2>Live Events</h2>
+					<ul id="live-event" class="clearfix">
 						<li>
-							<div class="year pull-left">2013</div>
-							<div class="description pull-right">
+							<div class="year fa-pull-left">2013</div>
+							<div class="description fa-pull-right">
 								<h3>Got Bachelor's Degree in Computer Science </h3>
 								<p></p>
 							</div>
 						</li>
 						<li>
-							<div class="year pull-left">2007</div>
-							<div class="description pull-right">
+							<div class="year fa-pull-left">2007</div>
+							<div class="description fa-pull-right">
 								<h3>Finished High School</h3>
 								<p></p>
 							</div>
 						</li>
 						<li>
-							<div class="year pull-left">1990</div>
-							<div class="description pull-right">
+							<div class="year fa-pull-left">1990</div>
+							<div class="description fa-pull-right">
 								<h3>Born in Cairo</h3>
 								<p></p>
 							</div>
@@ -149,19 +130,19 @@
 					<div id="language-skills">
 						<div class="skill">
 							Arabic
-							<div class="pull-right">
+							<div class="fa-pull-right">
 								<div class="skills-stars" data-stars="5"></div>
 							</div>
 						</div>
 						<div class="skill">
 							English
-							<div class="pull-right">
+							<div class="fa-pull-right">
 								<div class="skills-stars" data-stars="4"></div>
 							</div>
 						</div>
                         <div class="skill">
                             Dutch
-                            <div class="pull-right">
+                            <div class="fa-pull-right">
                                 <div class="skills-stars" data-stars="1"></div>
                             </div>
                         </div>
@@ -171,22 +152,22 @@
 				<div class="box clearfix">
 					<h2>Contact</h2>
 					<div class="contact-item">
-						<div class="icon pull-left text-center" title="Mobile">
-							<span class="fa fa-phone custom-icon custom-icon-phone" title="Mobile"></span>
+						<div class="icon fa-pull-left text-center" title="Mobile">
+							<span class="fa fa-phone" title="Mobile" aria-hidden="true"></span>
 						</div>
-						<div class="title only pull-right">+31 6 28 94 52 64</div>
+						<div class="title only fa-pull-right">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon pull-left text-center" title="Mobile">
-							<span class="fa fa-whatsapp custom-icon custom-icon-whatsapp" title="WhatsApp"></span>
+						<div class="icon fa-pull-left text-center" title="Mobile">
+							<span class="fa-brands fa-whatsapp" title="WhatsApp" aria-hidden="true"></span>
 						</div>
-						<div class="title only pull-right">+31 6 28 94 52 64</div>
+						<div class="title only fa-pull-right">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon pull-left text-center">
-							<span class="fa fa-envelope-o custom-icon custom-icon-gmail" title="E-mail"></span>
+						<div class="icon fa-pull-left text-center">
+							<span class="fa fa-envelope" title="E-mail" aria-hidden="true"></span>
 						</div>
-						<div class="title only pull-right">mo.elmedany@gmail.com</div>
+						<div class="title only fa-pull-right">mo.elmedany@gmail.com</div>
 					</div>
 				</div>
 				<!-- HOBBIES -->
@@ -216,12 +197,6 @@
 		var e = document.getElementsByTagName("script");
 		e = e[e.length - 2];
 		document.body.removeChild(e);
-	</script>
-	<script>
-		var e = document.getElementsByTagName("script");
-		var head = document.getElementsByTagName('head')[0];
-		head.removeChild(e[1]);
-		document.body.removeChild(e[e.length - 1]);
 	</script>
 </body>
 
