--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12">
+			<div class="col-12">
 				<div id="photo-header" class="text-center">
 					<a href="./">
 						<div id="photo">
@@ -31,86 +31,95 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-sm-7">
+			<div class="col-12 col-sm-7">
+				<!-- SUMMARY -->
+				<div class="box">
+					<h2>Summary</h2>
+					<p>I'm Mohamed, Senior Software Engineer with many years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
+					<p>I've recently developed a strong interest in data and machine learning, which has motivated me to study more about these topics and look for new possibilities that would expose me to cutting-edge technology and business challenges.</p>
+					<p>On the personal side, I'm a day-dreamer, coffee addict and food lover. I always seek new challenges to expand my skills and continue to develop both knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
+				</div>
+				<hr />
 				<!-- EXPERIENCES -->
 				<div class="box">
 					<h2>Experiences</h2>
-                    <div class="job clearfix">
-                        <div class="col-xs-3">
-                            <div class="where">Bol.</div>
-                            <div class="year"> 2018 - Now </div>
-                        </div>
-                        <div class="col-xs-9">
-                            <div class="profession">Software Engineer</div>
-                        </div>
-                    </div>
-                    <hr />
 					<div class="job clearfix">
-						<div class="col-xs-3">
+						<div class="col-3 float-start">
+							<div class="where">Bol.</div>
+							<div class="year"> 2018 - Now </div>
+						</div>
+						<div class="col-9 float-start">
+							<div class="profession">Software Engineer</div>
+						</div>
+					</div>
+					<hr />
+					<div class="job clearfix">
+						<div class="col-3 float-start">
 							<div class="where">VSSE</div>
 							<div class="year"> 2017 - 2018 </div>
 						</div>
-						<div class="col-xs-9">
+						<div class="col-9 float-start">
 							<div class="profession">Digital Design & Enablement Engineer</div>
 						</div>
 					</div>
-                    <hr />
+					<hr />
 					<div class="job clearfix">
-						<div class="col-xs-3">
+						<div class="col-3 float-start">
 							<div class="where">Vodafone</div>
 							<div class="year"> 2016 - 2017 </div>
 						</div>
-						<div class="col-xs-9">
+						<div class="col-9 float-start">
 							<div class="profession">Java Developer</div>
 						</div>
 					</div>
-                    <hr />
+					<hr />
 					<div class="job clearfix">
-						<div class="col-xs-3">
+						<div class="col-3 float-start">
 							<div class="where">ferrycode</div>
 							<div class="year"> 2014 - 2015 </div>
 						</div>
-						<div class="col-xs-9">
+						<div class="col-9 float-start">
 							<div class="profession">Software Developer</div>
 						</div>
 					</div>
 				</div>
+				<hr />
 				<!-- LIVE EVENTS -->
 				<div class="box">
 					<h2>Live Events</h2>
 					<ul id="live-event" class="clearfix">
 						<li>
-							<div class="year fa-pull-left">2013</div>
-							<div class="description fa-pull-right">
+							<div class="year float-start">2018</div>
+							<div class="description float-end">
+								<h3>Moved to the Netherlands </h3>
+								<p></p>
+							</div>
+						</li>
+						<li>
+							<div class="year float-start">2013</div>
+							<div class="description float-end">
 								<h3>Got Bachelor's Degree in Computer Science </h3>
 								<p></p>
 							</div>
 						</li>
 						<li>
-							<div class="year fa-pull-left">2007</div>
-							<div class="description fa-pull-right">
+							<div class="year float-start">2007</div>
+							<div class="description float-end">
 								<h3>Finished High School</h3>
 								<p></p>
 							</div>
 						</li>
 						<li>
-							<div class="year fa-pull-left">1990</div>
-							<div class="description fa-pull-right">
+							<div class="year float-start">1990</div>
+							<div class="description float-end">
 								<h3>Born in Cairo</h3>
 								<p></p>
 							</div>
 						</li>
 					</ul>
 				</div>
-				<!-- ABOUT ME -->
-				<div class="box">
-					<h2>Summary</h2>
-                    <p>Hello! I'm Mohamed, Senior Software Engineer with 10 years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
-                    <p>The technologies that I work with, alongside with Java, are Spring, Hibernate, PostgreSQL, Maven, Kubernetes, Cloud  and many more.</p>
-					<p>On the personal side, I'm a day dreamer, coffee addict and food lover. Additionally, I like listening to new music and learn to play it. I always seek new challenges to prove my developer and problem solving skills and continue to develop my knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
-				</div>
 			</div>
-			<div class="col-xs-12 col-sm-5">
+			<div class="col-12 col-sm-5">
 				<!-- SKILLS -->
 				<div class="box">
 					<h2>Skills</h2>
@@ -130,19 +139,19 @@
 					<div id="language-skills">
 						<div class="skill">
 							Arabic
-							<div class="fa-pull-right">
+							<div class="float-end">
 								<div class="skills-stars" data-stars="5"></div>
 							</div>
 						</div>
 						<div class="skill">
 							English
-							<div class="fa-pull-right">
+							<div class="float-end">
 								<div class="skills-stars" data-stars="4"></div>
 							</div>
 						</div>
                         <div class="skill">
                             Dutch
-                            <div class="fa-pull-right">
+                            <div class="float-end">
                                 <div class="skills-stars" data-stars="1"></div>
                             </div>
                         </div>
@@ -152,24 +161,31 @@
 				<div class="box clearfix">
 					<h2>Contact</h2>
 					<div class="contact-item">
-						<div class="icon fa-pull-left text-center" title="Mobile">
+						<div class="icon float-start text-center" title="Mobile">
 							<span class="fa fa-phone" title="Mobile" aria-hidden="true"></span>
 						</div>
-						<div class="title only fa-pull-right">+31 6 28 94 52 64</div>
+						<div class="title only float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon fa-pull-left text-center" title="Mobile">
+						<div class="icon float-start text-center" title="Mobile">
 							<span class="fa-brands fa-whatsapp" title="WhatsApp" aria-hidden="true"></span>
 						</div>
-						<div class="title only fa-pull-right">+31 6 28 94 52 64</div>
+						<div class="title only float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon fa-pull-left text-center">
+						<div class="icon float-start text-center">
 							<span class="fa fa-envelope" title="E-mail" aria-hidden="true"></span>
 						</div>
-						<div class="title only fa-pull-right">mo.elmedany@gmail.com</div>
+						<div class="title only float-end">mo.elmedany@gmail.com</div>
+					</div>
+					<div class="contact-item">
+						<div class="icon float-start text-center">
+							<span class="fa-brands fa-github" title="Github" aria-hidden="true"></span>
+						</div>
+						<div class="title only float-end">github.com/melmedany</div>
 					</div>
 				</div>
+				<hr />
 				<!-- HOBBIES -->
 				<div class="box">
 					<h2>Hobbies</h2>
@@ -187,13 +203,7 @@
 	<script src="./asset/js/inview.min.js"></script>
 	<script src="./asset/js/bootstrap.min.js"></script>
 	<script>
-		document.write("<script type='text/javascript' src='./asset/js/custom.min.js?v=" + Date.now() + "'><\/script>");
-		var e = document.getElementsByTagName("script");
-		e = e[e.length - 2];
-		document.body.removeChild(e);
-	</script>
-	<script>
-		document.write("<script type='text/javascript' src='./asset/js/app.min.js?v=" + Date.now() + "'><\/script>");
+		document.write("<script type='text/javascript' src='./asset/js/app.js?v=" + Date.now() + "'><\/script>");
 		var e = document.getElementsByTagName("script");
 		e = e[e.length - 2];
 		document.body.removeChild(e);
