--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<div class="year"> 2018 - Now </div>
 						</div>
 						<div class="col-9 float-start">
-							<div class="profession">Software Engineer</div>
+							<div class="profession">Senior Software Engineer</div>
 						</div>
 					</div>
 					<hr />
