--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 
 <body>
 	<div class="container">
-		<div class="row">
-			<div class="col-12">
-				<div id="photo-header" class="text-center">
-					<a href="./">
-						<div id="photo">
-							<img src="./asset/img/avatar.png" alt="avatar">
-						</div>
-					</a>
-					<div id="text-header">
-						<h1>Hello,<br> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
-					</div>
+		<div id="photo-header" class="text-center row">
+			<div class="col-12 col-sm-7">
+				<div id="text-header">
+					<h1>Hello,<br> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
+				</div>
+			</div>
+			<div class="col-12 col-sm-5">
+				<div id="photo">
+						<img src="./asset/img/avatar.png" alt="avatar">
 				</div>
 			</div>
 		</div>
+		<hr />
 		<div class="row">
 			<div class="col-12 col-sm-7">
 				<!-- SUMMARY -->
