--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 		<div id="photo-header" class="text-center row">
 			<div class="col-12 col-sm-7">
 				<div id="text-header">
-					<h1>Hello,<br> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
+					<h1>Hello,<br /> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
 				</div>
 			</div>
 			<div class="col-12 col-sm-5">
 				<div id="photo">
-						<img src="./asset/img/avatar.png" alt="avatar">
+                    <img src="./asset/img/avatar.png" alt="avatar">
 				</div>
 			</div>
 		</div>
