--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <body>
 	<div class="container">
 		<div id="photo-header" class="text-center row">
-			<div class="col-12 col-sm-7">
+			<div class="col-12 col-sm-8">
 				<div id="text-header">
 					<h1>Hello,<br /> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
 				</div>
 			</div>
-			<div class="col-12 col-sm-5">
+			<div class="col-12 col-sm-4">
 				<div id="photo">
                     <img src="./asset/img/avatar.png" alt="avatar">
 				</div>
@@ -30,61 +30,77 @@
 		</div>
 		<hr />
 		<div class="row">
-			<div class="col-12 col-sm-7">
-				<!-- SUMMARY -->
-				<div class="box">
-					<h2>Summary</h2>
-					<p>I'm Mohamed, Senior Software Engineer with many years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
-					<p>I've recently developed a strong interest in data and machine learning, which has motivated me to study more about these topics and look for new possibilities that would expose me to cutting-edge technology and business challenges.</p>
-					<p>On the personal side, I'm a day-dreamer, coffee addict and food lover. I always seek new challenges to expand my skills and continue to develop both knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
-				</div>
-				<hr />
+			<div class="col-12 col-sm-8">
 				<!-- EXPERIENCES -->
-				<div class="box">
+				<div class="block">
 					<h2>Experiences</h2>
 					<div class="job clearfix">
 						<div class="col-3 float-start">
-							<div class="where">Bol.</div>
-							<div class="year"> 2018 - Now </div>
+							<div class="employer">Bol.</div>
+							<div class="duration"> 2018 - Now </div>
 						</div>
 						<div class="col-9 float-start">
-							<div class="profession">Senior Software Engineer</div>
+							<div class="job-title">Senior Software Engineer</div>
+							<div class="job-description">
+								<ul>
+									<li>Development and and continuous maintenance of Billie, the chatbot, with aim of providing precise automated responses to customers in milliseconds. This primarily involved backend integration with own services that detects intent or ask to rephrase, efficiently routing questions through the appropriate content flows and consume other services in the landscape for realtime data. In addition to migration of old content flows to new content tooling.</li>
+									<li>In my sub-role as Scrum Master, I was responsible for ensuring that the scrum team adheres to the agreed work processes and procedures in addition to maintaining harmonious and disruption-free environment, as well as the onboarding and leadership of new engineers.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<hr />
 					<div class="job clearfix">
 						<div class="col-3 float-start">
-							<div class="where">VSSE</div>
-							<div class="year"> 2017 - 2018 </div>
+							<div class="employer">VSSE</div>
+							<div class="duration"> 2017 - 2018 </div>
 						</div>
 						<div class="col-9 float-start">
-							<div class="profession">Digital Design & Enablement Engineer</div>
+							<div class="job-title">Digital Design & Enablement Engineer</div>
+							<div class="job-description">
+								<ul>
+									<li>Collaborating with a team of 4 developers to automate and digitize real-time business processes and workflows, aiming for increased efficiency and productivity.</li>
+									<li>Introducing new tools & technologies.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<hr />
 					<div class="job clearfix">
 						<div class="col-3 float-start">
-							<div class="where">Vodafone</div>
-							<div class="year"> 2016 - 2017 </div>
+							<div class="employer">Vodafone</div>
+							<div class="duration"> 2016 - 2017 </div>
 						</div>
 						<div class="col-9 float-start">
-							<div class="profession">Java Developer</div>
+							<div class="job-title">Java Developer</div>
+							<div class="job-description">
+								<ul>
+									<li>Involved in Java/Java EE application development, building high-performing, scalable, and enterprise-grade applications.</li>
+									<li>Used to analyze user requirements, envisioning system features and functionality, designs, develops user interfaces to internet/intranet applications. Also Integrates applications by designing database architecture and server scripting.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<hr />
 					<div class="job clearfix">
 						<div class="col-3 float-start">
-							<div class="where">ferrycode</div>
-							<div class="year"> 2014 - 2015 </div>
+							<div class="employer">ferrycode</div>
+							<div class="duration"> 2014 - 2015 </div>
 						</div>
 						<div class="col-9 float-start">
-							<div class="profession">Software Developer</div>
+							<div class="job-title">Software Developer</div>
+							<div class="job-description">
+								<ul>
+									<li>Work closely with the expierienced developers to analyze, design, develop, test, maintain and document the company's current and newly introduced solutions. Additionally, conduct on-site customer visits to configure tailored solutions and deliver training when necessary.</li>
+									<li>Acquiring knowledge and integrating it with technologies to enhance software quality and user experience.</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 				<hr />
 				<!-- LIVE EVENTS -->
-				<div class="box">
+				<div class="block">
 					<h2>Live Events</h2>
 					<ul id="live-event" class="clearfix">
 						<li>
@@ -117,10 +133,18 @@
 						</li>
 					</ul>
 				</div>
+				<hr />
+				<!-- SUMMARY -->
+				<div class="block">
+					<h2>Summary</h2>
+					<p>I'm Mohamed, Senior Software Engineer with many years of experience in software development. I have outstanding experience building software solutions that are both highly available and scalable, and I have proven my skills in multiple work environments, from startups to large multinational organisations.</p>
+					<p>I've recently developed a strong interest in data and machine learning, which has motivated me to study more about these topics and look for new possibilities that would expose me to cutting-edge technology and business challenges.</p>
+					<p>On the personal side, I'm a day-dreamer, coffee addict and food lover. I always seek new challenges to expand my skills and continue to develop both knowledge and potential, in addition to experience cultural differences and gain new friends.</p>
+				</div>
 			</div>
-			<div class="col-12 col-sm-5">
+			<div class="col-12 col-sm-4">
 				<!-- SKILLS -->
-				<div class="box">
+				<div class="block">
 					<h2>Skills</h2>
 					<div class="skills">
 						<div class="item-skills" data-percent="0.99">Java</div>
@@ -133,7 +157,7 @@
 				</div>
                 <hr />
 				<!-- LANGUAGES -->
-				<div class="box">
+				<div class="block">
 					<h2>Languages</h2>
 					<div id="language-skills">
 						<div class="skill">
@@ -157,36 +181,42 @@
 					</div>
 				</div>
 				<!-- CONTACT -->
-				<div class="box clearfix">
+				<div class="block clearfix">
 					<h2>Contact</h2>
 					<div class="contact-item">
 						<div class="icon float-start text-center" title="Mobile">
 							<span class="fa fa-phone" title="Mobile" aria-hidden="true"></span>
 						</div>
-						<div class="title only float-end">+31 6 28 94 52 64</div>
+						<div class="title float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
 						<div class="icon float-start text-center" title="Mobile">
 							<span class="fa-brands fa-whatsapp" title="WhatsApp" aria-hidden="true"></span>
 						</div>
-						<div class="title only float-end">+31 6 28 94 52 64</div>
+						<div class="title float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
 						<div class="icon float-start text-center">
 							<span class="fa fa-envelope" title="E-mail" aria-hidden="true"></span>
 						</div>
-						<div class="title only float-end">mo.elmedany@gmail.com</div>
+						<div class="title float-end">mo.elmedany@gmail.com</div>
+					</div>
+					<div class="contact-item">
+						<div class="icon float-start text-center">
+							<span class="fa-brands fa-linkedin" title="LinkedIn" aria-hidden="true"></span>
+						</div>
+						<div class="title float-end">linkedin.com/in/themedany</div>
 					</div>
 					<div class="contact-item">
 						<div class="icon float-start text-center">
 							<span class="fa-brands fa-github" title="Github" aria-hidden="true"></span>
 						</div>
-						<div class="title only float-end">github.com/melmedany</div>
+						<div class="title float-end">github.com/melmedany</div>
 					</div>
 				</div>
 				<hr />
 				<!-- HOBBIES -->
-				<div class="box">
+				<div class="block">
 					<h2>Hobbies</h2>
 					<div class="hobby">Coffee</div>
 					<div class="hobby">Music</div>
