--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="photo-header" class="text-center row">
 			<div class="col-12 col-sm-8">
 				<div id="text-header">
-					<h1>Hello,<br /> my name is <a href="./"><span>Mohamed</span></a><sup id='years'></sup> and here I briefly introduce myself</h1>
+					<h1>Hello,<br /> my name is <a href="./"><span>Mohamed</span></a><sup id="age"></sup> and here I briefly introduce myself</h1>
 				</div>
 			</div>
 			<div class="col-12 col-sm-4">
@@ -99,41 +99,6 @@
 					</div>
 				</div>
 				<hr />
-				<!-- LIVE EVENTS -->
-				<div class="block">
-					<h2>Live Events</h2>
-					<ul id="live-event" class="clearfix">
-						<li>
-							<div class="year float-start">2018</div>
-							<div class="description float-end">
-								<h3>Moved to the Netherlands </h3>
-								<p></p>
-							</div>
-						</li>
-						<li>
-							<div class="year float-start">2013</div>
-							<div class="description float-end">
-								<h3>Got Bachelor's Degree in Computer Science </h3>
-								<p></p>
-							</div>
-						</li>
-						<li>
-							<div class="year float-start">2007</div>
-							<div class="description float-end">
-								<h3>Finished High School</h3>
-								<p></p>
-							</div>
-						</li>
-						<li>
-							<div class="year float-start">1990</div>
-							<div class="description float-end">
-								<h3>Born in Cairo</h3>
-								<p></p>
-							</div>
-						</li>
-					</ul>
-				</div>
-				<hr />
 				<!-- SUMMARY -->
 				<div class="block">
 					<h2>Summary</h2>
@@ -163,19 +128,19 @@
 						<div class="skill">
 							Arabic
 							<div class="float-end">
-								<div class="skills-stars" data-stars="5"></div>
+								<div class="stars" data-stars="5"></div>
 							</div>
 						</div>
 						<div class="skill">
 							English
 							<div class="float-end">
-								<div class="skills-stars" data-stars="4"></div>
+								<div class="stars" data-stars="4"></div>
 							</div>
 						</div>
                         <div class="skill">
                             Dutch
                             <div class="float-end">
-                                <div class="skills-stars" data-stars="1"></div>
+                                <div class="stars" data-stars="1"></div>
                             </div>
                         </div>
 					</div>
@@ -184,35 +149,62 @@
 				<div class="block clearfix">
 					<h2>Contact</h2>
 					<div class="contact-item">
-						<div class="icon float-start text-center" title="Mobile">
+						<div class="icon float-start">
 							<span class="fa fa-phone" title="Mobile" aria-hidden="true"></span>
 						</div>
 						<div class="title float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon float-start text-center" title="Mobile">
+						<div class="icon float-start">
 							<span class="fa-brands fa-whatsapp" title="WhatsApp" aria-hidden="true"></span>
 						</div>
 						<div class="title float-end">+31 6 28 94 52 64</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon float-start text-center">
+						<div class="icon float-start">
 							<span class="fa fa-envelope" title="E-mail" aria-hidden="true"></span>
 						</div>
 						<div class="title float-end">mo.elmedany@gmail.com</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon float-start text-center">
+						<div class="icon float-start">
 							<span class="fa-brands fa-linkedin" title="LinkedIn" aria-hidden="true"></span>
 						</div>
 						<div class="title float-end">linkedin.com/in/themedany</div>
 					</div>
 					<div class="contact-item">
-						<div class="icon float-start text-center">
+						<div class="icon float-start">
 							<span class="fa-brands fa-github" title="Github" aria-hidden="true"></span>
 						</div>
 						<div class="title float-end">github.com/melmedany</div>
 					</div>
+				</div>
+				<hr />
+				<!-- LIVE EVENTS -->
+				<div class="block">
+					<h2>Live Events</h2>
+					<ul class="timeline">
+						<li class="timeline-item">
+							<h5 class="timeline-title">Moved to the Netherlands</h5>
+							<p class="timeline-year">2018</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Got Bachelor's Degree in Computer Science</h5>
+							<p class="timeline-year">2013</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Finished High School</h5>
+							<p class="timeline-year">2007</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Moved to the Netherlands</h5>
+							<p class="timeline-year">2018</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Born in Cairo</h5>
+							<p class="timeline-year">1990</p>
+						</li>
+					</ul>
 				</div>
 				<hr />
 				<!-- HOBBIES -->
