--- a/index.html
+++ b/index.html
@@ -124,27 +124,50 @@
 				<!-- LANGUAGES -->
 				<div class="block">
 					<h2>Languages</h2>
-					<div id="language-skills">
-						<div class="skill">
+					<div>
+						<div class="language">
 							Arabic
 							<div class="float-end">
-								<div class="stars" data-stars="5"></div>
+								<div class="points" data-points="5"></div>
 							</div>
 						</div>
-						<div class="skill">
+						<div class="language">
 							English
 							<div class="float-end">
-								<div class="stars" data-stars="4"></div>
+								<div class="points" data-points="4"></div>
 							</div>
 						</div>
-                        <div class="skill">
+                        <div class="language">
                             Dutch
                             <div class="float-end">
-                                <div class="stars" data-stars="1"></div>
+                                <div class="points" data-points="1"></div>
                             </div>
                         </div>
 					</div>
 				</div>
+				<!-- LIVE EVENTS -->
+				<div class="block">
+					<h2>Live Events</h2>
+					<ul class="timeline">
+						<li class="timeline-item">
+							<h5 class="timeline-title">Moved to the Netherlands</h5>
+							<p class="timeline-year">2018</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Got Bachelor's Degree in Computer Science</h5>
+							<p class="timeline-year">2013</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Finished High School</h5>
+							<p class="timeline-year">2007</p>
+						</li>
+						<li class="timeline-item">
+							<h5 class="timeline-title">Born in Cairo</h5>
+							<p class="timeline-year">1990</p>
+						</li>
+					</ul>
+				</div>
+				<hr />
 				<!-- CONTACT -->
 				<div class="block clearfix">
 					<h2>Contact</h2>
@@ -178,29 +201,6 @@
 						</div>
 						<div class="title float-end">github.com/melmedany</div>
 					</div>
-				</div>
-				<hr />
-				<!-- LIVE EVENTS -->
-				<div class="block">
-					<h2>Live Events</h2>
-					<ul class="timeline">
-						<li class="timeline-item">
-							<h5 class="timeline-title">Moved to the Netherlands</h5>
-							<p class="timeline-year">2018</p>
-						</li>
-						<li class="timeline-item">
-							<h5 class="timeline-title">Got Bachelor's Degree in Computer Science</h5>
-							<p class="timeline-year">2013</p>
-						</li>
-						<li class="timeline-item">
-							<h5 class="timeline-title">Finished High School</h5>
-							<p class="timeline-year">2007</p>
-						</li>
-						<li class="timeline-item">
-							<h5 class="timeline-title">Born in Cairo</h5>
-							<p class="timeline-year">1990</p>
-						</li>
-					</ul>
 				</div>
 				<hr />
 				<!-- HOBBIES -->
