--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<div class="job-title">Senior Software Engineer</div>
 							<div class="job-description">
 								<ul>
-									<li>Development and and continuous maintenance of Billie, the chatbot, with aim of providing precise automated responses to customers in milliseconds. This primarily involved backend integration with own services that detects intent or ask to rephrase, efficiently routing questions through the appropriate content flows and consume other services in the landscape for realtime data. In addition to migration of old content flows to new content tooling.</li>
+									<li>Development and continuous maintenance of Billie, the chatbot, with aim of providing precise automated responses to customers in milliseconds. This primarily involved backend integration with own services that detects intent or ask to rephrase, efficiently routing questions through the appropriate content flows and consume other services in the landscape for realtime data. In addition to migration of old content flows to new content tooling.</li>
 									<li>In my sub-role as Scrum Master, I was responsible for ensuring that the scrum team adheres to the agreed work processes and procedures in addition to maintaining harmonious and disruption-free environment, as well as the onboarding and leadership of new engineers.</li>
 								</ul>
 							</div>
