--- a/index.html
+++ b/index.html
@@ -222,6 +222,16 @@
 		document.write("<script src='./asset/js/app.min.js?v=" + Date.now() + "'><\/script>");
 		document.querySelectorAll(".remove").forEach(el => el.remove());
 	</script>
+	<script>
+	    (function(h,o,t,j,a,r){
+	        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+	        h._hjSettings={hjid:3778186,hjsv:6};
+	        a=o.getElementsByTagName('head')[0];
+	        r=o.createElement('script');r.async=1;
+	        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+	        a.appendChild(r);
+	    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+	</script>
 </body>
 
 </html>
