--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
 			</div>
 		</div>
 	</div>
+	<a title="Web Analytics" href="https://clicky.com/101436033"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+	<script async src="//static.getclicky.com/101436033.js"></script>
+	<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101436033ns.gif" /></p></noscript>
 	<script src="./asset/js/jquery.min.js"></script>
 	<script src="./asset/js/bootstrap.min.js"></script>
 	<script class="remove">
